python/testData/highlighting/continueOutsideOfLoop.py
for x in [1, 2, 3]:
    pass
else:
    <error descr="'continue' outside loop">continue</error>

while True:
    pass
else:
    <error descr="'continue' outside loop">continue</error>